--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -22,6 +22,6 @@ jobs:
           results_file: results.sarif
           results_format: sarif
           publish_results: true
-      - github/codeql-action/upload-sarif@3e7e3b32d0fb8283594bb0a76cc60a00918b0969 # v2.1.6
+      - uses: github/codeql-action/upload-sarif@3e7e3b32d0fb8283594bb0a76cc60a00918b0969 # v2.1.6
         with:
           sarif_file: results.sarif
