Improve Gradle wrapper handling.

--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -236,6 +236,7 @@
         <profile>
             <id>checks</id>
             <activation>
+                <activeByDefault>false</activeByDefault>
                 <jdk>[1.7,)</jdk>
             </activation>
             <build>
