--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -220,6 +220,7 @@
         <profile>
             <id>checks</id>
             <activation>
+                <activeByDefault>false</activeByDefault>
                 <jdk>[1.7,)</jdk>
             </activation>
             <build>
