--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
         <version.plugin.clean>3.2.0</version.plugin.clean>
         <version.plugin.bundle>5.1.7</version.plugin.bundle>
         <version.plugin.compiler>3.10.1</version.plugin.compiler>
-        <version.plugin.install>3.0.0</version.plugin.install>
-        <version.plugin.deploy>3.0.0-M2</version.plugin.deploy>
+        <version.plugin.install>3.0.1</version.plugin.install>
+        <version.plugin.deploy>3.0.0</version.plugin.deploy>
         <version.plugin.staging>1.6.13</version.plugin.staging>
         <version.plugin.versions>2.11.0</version.plugin.versions>
         <version.plugin.javadoc>3.3.1</version.plugin.javadoc>
@@ -429,6 +429,8 @@
                 <version.plugin.clean>3.0.0</version.plugin.clean>
                 <version.plugin.bundle>2.5.4</version.plugin.bundle>
                 <version.plugin.compiler>3.6.2</version.plugin.compiler>
+                <version.plugin.install>2.5.2</version.plugin.install>
+                <version.plugin.deploy>2.8.2</version.plugin.deploy>
                 <version.plugin.staging>1.6.8</version.plugin.staging>
                 <version.plugin.versions>2.4</version.plugin.versions>
                 <version.plugin.source>2.4</version.plugin.source>
