Fix jar creation.

--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -43,6 +43,11 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources-maven</directory>
+            </resource>
+        </resources>
         <plugins>
             <!-- The Gradle plugin must be built by Gradle; therefore the compilation is skipped. -->
             <plugin>
@@ -52,15 +57,6 @@
                 <configuration>
                     <skipMain>true</skipMain>
                     <skip>true</skip>
-                </configuration>
-            </plugin>
-            <!-- Without compilation, no jar is created which would be empty. -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>${version.plugin.jar}</version>
-                <configuration>
-                    <skipIfEmpty>true</skipIfEmpty>
                 </configuration>
             </plugin>
             <!-- Gradle is also responsible for creating javadoc such that this task is skipped here. -->
