--- a/byte-buddy-android/pom.xml
+++ b/byte-buddy-android/pom.xml
@@ -87,7 +87,7 @@
             </properties>
         </profile>
         <profile>
-            <id>checks</id>
+            <id>japicmp-check</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
                 <jdk>[1.7,)</jdk>
