--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -14,11 +14,11 @@
     <description>A plugin for post-processing class files via Byte Buddy in a Gradle build.</description>
 
     <!--
-        This sub project is built by Gradle as the Gradle plugin API requires a Gradle build. This POM
+        This subproject is built by Gradle as the Gradle plugin API requires a Gradle build. This POM
         triggers the Gradle build via a Gradle execution plugin in order to keep the build seamless. The
         built artifacts are then attached to this Maven project once the build completed successfully.
 
-        IDEs are typically confused by this setup and this sub project should be directly imported as
+        IDEs are typically confused by this setup and this subproject should be directly imported as
         a Gradle project to avoid errors. Alternatively, this project should be ignored.
 
         When running Maven clean, this module might fail if the dependencies were never packaged before.
@@ -30,6 +30,7 @@
     <properties>
         <gradle.exec>gradlew</gradle.exec>
         <gradle.disabled>false</gradle.disabled>
+        <gradle.release>false</gradle.release>
         <!-- Actual values must be set via settings.xml or using command line arguments since they cannot be published. -->
         <gradle.publish.key />
         <gradle.publish.secret />
@@ -87,8 +88,8 @@
                             <executable>${project.basedir}/${gradle.exec}</executable>
                             <arguments>
                                 <argument>clean</argument>
-                                <argument>--build-file=build.simple.gradle</argument>
                                 <argument>--info</argument>
+                                <argument>-Dnet.bytebuddy.gradle.release=${gradle.release}</argument>
                             </arguments>
                         </configuration>
                     </execution>
@@ -103,10 +104,10 @@
                             <arguments>
                                 <argument>build</argument>
                                 <argument>javadocJar</argument>
-                                <argument>--build-file=build.simple.gradle</argument>
                                 <argument>--info</argument>
                                 <argument>-Dnet.bytebuddy.test.integration=${bytebuddy.integration}</argument>
                                 <argument>-Dnet.bytebuddy.misc.extras=${bytebuddy.extras}</argument>
+                                <argument>-Dnet.bytebuddy.gradle.release=${gradle.release}</argument>
                                 <argument>-Dnet.bytebuddy.gradle.source=${sourcecode.main.version}</argument>
                                 <argument>-Dnet.bytebuddy.gradle.target=${bytecode.main.version}</argument>
                             </arguments>
@@ -122,10 +123,10 @@
                             <executable>${project.basedir}/${gradle.exec}</executable>
                             <arguments>
                                 <argument>publishPlugins</argument>
-                                <argument>--build-file=build.gradle</argument>
                                 <argument>--info</argument>
                                 <argument>-Dnet.bytebuddy.test.integration=${bytebuddy.integration}</argument>
                                 <argument>-Dnet.bytebuddy.misc.extras=${bytebuddy.extras}</argument>
+                                <argument>-Dnet.bytebuddy.gradle.release=${gradle.release}</argument>
                                 <argument>-Pgradle.publish.key=${gradle.publish.key}</argument>
                                 <argument>-Pgradle.publish.secret=${gradle.publish.secret}</argument>
                             </arguments>
@@ -169,6 +170,17 @@
             </activation>
             <properties>
                 <gradle.exec>gradlew.bat</gradle.exec>
+            </properties>
+        </profile>
+
+        <!-- Activates the Gradle release configuration. -->
+        <profile>
+            <id>gradle-release</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <gradle.release>true</gradle.release>
             </properties>
         </profile>
 
