--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ permissions: read-all
 jobs:
   hotspot-ea:
     name: HotSpot (EA)
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     continue-on-error: true
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-18.04, macOS-10.15, windows-2019 ]
+        os: [ ubuntu-20.04, macos-11, windows-2022 ]
         java: [ 8, 11, 17, 18 ]
     runs-on: ${{ matrix.os }}
     steps:
@@ -47,7 +47,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-18.04, macOS-10.15, windows-2019 ]
+        os: [ ubuntu-20.04, macos-11, windows-2022 ]
         java: [ 8, 11 ]
     runs-on: ${{ matrix.os }}
     steps:
@@ -66,7 +66,7 @@ jobs:
       fail-fast: false
       matrix:
         java: [ 9, 10, 12, 13, 14, 15, 16 ]
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
@@ -82,7 +82,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-18.04, windows-2019 ]
+        os: [ ubuntu-20.04, windows-2022 ]
         java: [ 8 ]
     runs-on: ${{ matrix.os }}
     steps:
@@ -101,7 +101,7 @@ jobs:
       fail-fast: false
       matrix:
         java: [ 6, 7 ]
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/cache@0865c47f36e68161719c5b124609996bb5c40129 # v3.0.5
@@ -118,7 +118,7 @@ jobs:
         run: ./mvnw -s .mvn/nossl.settings.xml verify -Pintegration -Pjava${{ matrix.java }}
   extended:
     name: Runs an extended build including code inspection
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     needs: [ hotspot-ea, hotspot-supported, j9-supported, hotspot-unsupported, hotspot-32, hotspot-legacy ]
     if: github.event_name == 'push'
     steps:
@@ -133,7 +133,7 @@ jobs:
         run: ./mvnw jacoco:prepare-agent verify jacoco:report coveralls:report -DrepoToken=${{ secrets.coveralls }} -Pextras -Pchecks -Panalysis -Pintegration
   release:
     name: Release new version
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     needs: [ extended ]
     if: github.event_name == 'push' && startsWith(github.event.head_commit.message, '[release]')
     steps:
