--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -85,13 +85,13 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>${jna.version}</version>
+            <version>${version.jna}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
-            <version>${jna.version}</version>
+            <version>${version.jna}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
