--- a/pom.xml
+++ b/pom.xml
@@ -204,8 +204,10 @@
                         <include>net/bytebuddy/**</include>
                     </includes>
                     <excludes>
+                        <!-- Do not include JMH generated classes (both modern and legacy JMH).-->
                         <exclude>net/bytebuddy/benchmark/generated/*</exclude>
-                        <!-- Avoid adding synthetic members to test classes as test assert class members.  -->
+                        <exclude>net/bytebuddy/benchmark/jmh_generated/*</exclude>
+                        <!-- Avoid adding synthetic members to test classes as test assert class members. -->
                         <exclude>*Test*</exclude>
                         <exclude>*test*</exclude>
                     </excludes>
