--- a/byte-buddy-gradle-plugin/common.gradle
+++ b/byte-buddy-gradle-plugin/common.gradle
@@ -1,12 +1,9 @@
 import java.util.regex.Pattern
 
-ext.pom = new XmlSlurper().parse(file('./pom.xml'))
+apply from: "${rootDir}/versioning.gradle"
+
 ext.outerPom = new XmlSlurper().parse(file('../pom.xml'))
 ext.release = Boolean.getBoolean('net.bytebuddy.gradle.release')
-
-group = pom.parent.groupId.text().toString()
-version = pom.parent.version.text().toString()
-description = pom.description.text().toString()
 
 compileJava {
     options.warnings = true
