--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,6 +136,8 @@ jobs:
     runs-on: ubuntu-20.04
     needs: [ extended ]
     if: github.event_name == 'push' && startsWith(github.event.head_commit.message, '[release]')
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
       - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
