Fix javadoc warnings and errors for newer JDKs.

--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -216,7 +216,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>${version.plugin.javadoc}</version>
-                        <configuration>
+                        <configuration combine.children="append">
                             <includeDependencySources>true</includeDependencySources>
                             <dependencySourceIncludes>
                                 <dependencySourceInclude>${project.groupId}:byte-buddy-dep</dependencySourceInclude>
