--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
         <version.plugin.deploy>3.0.0</version.plugin.deploy>
         <version.plugin.staging>1.6.13</version.plugin.staging>
         <version.plugin.versions>2.11.0</version.plugin.versions>
-        <version.plugin.javadoc>3.3.1</version.plugin.javadoc>
+        <version.plugin.javadoc>3.4.0</version.plugin.javadoc>
         <version.plugin.source>3.0.1</version.plugin.source>
         <version.plugin.shade>3.3.0</version.plugin.shade>
         <version.plugin.gpg>3.0.1</version.plugin.gpg>
@@ -872,6 +872,29 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <!-- Download ASM 'element-list' file which is published by newer javadoc versions, store as 'package-list' file. -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>${version.plugin.antrun}</version>
+                        <executions>
+                            <execution>
+                                <id>download-javadoc-lists</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <mkdir dir="${project.basedir}/target/javadoc-lists/asm"/>
+                                        <get src="https://javadoc.io/doc/org.ow2.asm/asm/${version.asm}/element-list"
+                                             dest="${project.basedir}/target/javadoc-lists/asm/package-list"
+                                             skipexisting="true"/>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                     <!-- Create javadoc artifact. -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -887,8 +910,14 @@
                         <configuration>
                             <source>${sourcecode.main.version}</source>
                             <detectJavaApiLink>true</detectJavaApiLink>
+                            <!-- Use previously downloaded 'package-list' file as substitute for published 'element-list' file. -->
+                            <offlineLinks>
+                                <link>
+                                    <url>https://javadoc.io/doc/org.ow2.asm/asm/${version.asm}</url>
+                                    <location>${project.basedir}/target/javadoc-lists/asm</location>
+                                </link>
+                            </offlineLinks>
                             <links>
-                                <link>https://javadoc.io/doc/org.ow2.asm/asm/${version.asm}</link>
                                 <link>https://javadoc.io/doc/net.java.dev.jna/jna/${version.jna}</link>
                             </links>
                             <excludePackageNames>
