--- a/byte-buddy-gradle-plugin/common.gradle
+++ b/byte-buddy-gradle-plugin/common.gradle
@@ -66,6 +66,15 @@ if (true || Boolean.getBoolean('net.bytebuddy.misc.extras')) {
             from javadoc.destinationDir
         }
     }
+    if (Boolean.getBoolean('net.bytebuddy.misc.extras')) {
+        javadoc {
+            options {
+                links 'https://docs.oracle.com/javase/6/docs/api'
+                links 'https://docs.gradle.org/7.5/javadoc'
+                links ''
+            }
+        }
+    }
 } else {
     task javadocJar {
         logger.info('javadoc is only generated if net.bytebuddy.misc.extras is set to true')
