--- a/byte-buddy-maven-plugin/pom.xml
+++ b/byte-buddy-maven-plugin/pom.xml
@@ -16,9 +16,6 @@
     <description>A plugin for post-processing class files via Byte Buddy in a Maven build.</description>
 
     <properties>
-        <version.maven>3.2.5</version.maven>
-        <version.maven.annotation>3.5.2</version.maven.annotation>
-        <version.maven.aether>1.1.0</version.maven.aether>
         <version.maven.test>3.3.0</version.maven.test>
         <version.slf4j>1.7.36</version.slf4j>
         <version.maven.plexus-archiver>3.7.0</version.maven.plexus-archiver>
@@ -63,7 +60,7 @@
         <dependency>
             <groupId>org.sonatype.plexus</groupId>
             <artifactId>plexus-build-api</artifactId>
-            <version>0.0.7</version>
+            <version>${version.maven.plexus-build-api}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
